--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cclap2020/finalEv",
+  "name": "@cclap2020/final-ev",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
